<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.courseDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UI.courseDetails">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="400dp"
            android:layout_height="315dp"
            android:layout_marginTop="3dp"
            android:background="#ff6750a4"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/course_name_text"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/courseName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/course_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/start_date_text"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/startDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/start_date"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/end_date_text"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/endDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/end_date"
                    android:inputType="date"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/instructor_name_text"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/instructor_name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/instructor_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/instructorPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/instructor_phone"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000000"
                    android:textColorHint="#ffffff"
                    android:textSize="12sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="17dp"
            android:text="@string/status"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <RadioGroup
            android:id="@+id/statusRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="132dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusText"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/inProgressRadio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/in_progress"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/completedRadio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/complete"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/droppedRadio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/dropped"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/planToTakeRadio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plan_to_take"
                android:textSize="12sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/notesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:text="@string/course_notes"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ScrollView
            android:id="@+id/notesScroll"
            android:layout_width="159dp"
            android:layout_height="121dp"
            android:layout_marginEnd="24dp"
            android:background="#ff6750a4"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesText">

            <EditText
                android:id="@+id/editCourseNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/add_course_notes_here"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="12sp"
                tools:ignore="Autofill" />

        </ScrollView>

        <ImageView
            android:id="@+id/shareNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="192dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesScroll"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_share"
            app:tint="#ff6750a4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>